logica sintaxtico