@@ -2,7 +2,6 @@ package com.neolcr;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -12,30 +11,38 @@ public class Main {
         list.add(new SqlNodeTree("SELECT", Type.SELECT,null, Type.AST));
         list.add(new SqlNodeTree("SELECT", Type.SELECT,null, Type.TABLE));
         list.add(new SqlNodeTree("*", Type.AST, Type.SELECT, Type.FROM));
-        list.add(new SqlNodeTree("FROM", Type.FROM,"SELECT", "FROM"));
+        list.add(new SqlNodeTree("FROM", Type.FROM, Type.SELECT, Type.TABLE));
         list.add(new SqlNodeTree("", Type.TABLE, Type.FROM, Type.SEMICOLON));
 
-        List<String> strings = Arrays.asList("SELECT", "*", "FROM", "tabla1", ";");
-        int index = 0;
+        List<String> elements = new ArrayList<>(List.of("SELECT", "*", "FROM", "tabla1", ";"));
         List<SqlNodeTree> collected = new ArrayList<>();
-        List<SqlNodeTree> found = new ArrayList<>();
-        for (String elemento : strings) {
-            if (index == 0) {
-                found = list.stream()
-                        .filter(it -> it.value.equals(elemento)).collect(Collectors.toList());
+        List<SqlNodeTree> found = list.stream()
+                .filter(it -> it.value.equals(list.getFirst().value)).collect(Collectors.toList());
 
-            } else {
-                found = collected.stream()
-                        .filter(it -> it.value.equals(elemento)).collect(Collectors.toList());
-            }
-            index++;
+        final List<Type> firstNextTypes = found.stream().map(it -> it.nextType).toList();
+        final List<String> firstNextValues = found.stream().map(it -> it.nextValue).toList();
+        collected = list.stream().filter(it -> firstNextTypes.contains(it.type) || firstNextValues.contains(it.value)).toList();
+        elements.removeFirst();
 
+        for (String element : elements) {
+             found = collected.stream()
+                        .filter(it -> it.value.equals(element)).toList();
+            final List<Type> nextTypes = found.stream().map(it -> it.nextType).toList();
+            final List<String> nextValues = found.stream().map(it -> it.nextValue).toList();
             if (found.isEmpty()) {
-                throw new RuntimeException(("El elemento no existe: " + elemento));
+                List<SqlNodeTree> tables = collected.stream().filter(it -> it.type.equals(Type.TABLE)).toList();
+                if (tables.size() > 1) {
+                    throw new RuntimeException("No tiene sentido que haya mas de una tabla");
+                }
+                SqlNodeTree table = tables.getFirst();
+                if (table.getPreviousType().equals(Type.FROM)) {
+                    table.setValue(element);
+                } else {
+                    throw new RuntimeException("Encontrada declaracion de tabla sin FROM");
+                }
+                //throw new RuntimeException(("El element no existe: " + element));
             }
-            List<Type> nextTypes = found.stream().map(it -> it.nextType).collect(Collectors.toList());
-            List<String> nextValues = found.stream().map(it -> it.nextValue).collect(Collectors.toList());
-            collected = list.stream().filter(it -> nextTypes.contains(it.type) || nextValues.contains(it.value)).collect(Collectors.toList());
+            collected = list.stream().filter(it -> nextTypes.contains(it.type) || nextValues.contains(it.value)).toList();
 
         }
 
